fix vertical alignment

--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -848,6 +848,12 @@ button.prpl-info-icon {
 		display: grid;
 		grid-template-columns: repeat(auto-fit, minmax(var(--prpl-column-min-width), 1fr));
 		grid-gap: var(--prpl-gap);
+
+		.prpl-widget-wrapper {
+			display: flex;
+			flex-direction: column;
+			justify-content: space-between;
+		}
 	}
 }
 
